--- a/source/_posts/我的家里空无一物——解析要点.md
+++ b/source/_posts/我的家里空无一物——解析要点.md
@@ -3,7 +3,7 @@ title: 我的家里空无一物——解析要点
 tag: [装修, 收纳]
 date: 2016-10-25 13:52:00
 updated: 2016-10-25 13:52:00
-category: [家, 装修]
+category: [装修]
 ---
 我的家空无一物要点概述：
 ```
@@ -59,7 +59,7 @@ category: [家, 装修]
 听过很多道理
 虽然可能仍过不好这一生
 但知道关于死的道理 至少可能轻松地死
-- 不要到最后才说对不起
+- `不要到最后才说对不起`
 	- 不管是说出对不起 还是说出我爱你
 	- 当下就是最好的时机
 - 没有时间伤心,也许是好事啊
@@ -69,7 +69,7 @@ category: [家, 装修]
 	- 因为爱你,所以了解你,再由于了解而更加爱你
 	- 难以忘怀的每一帧回忆的图像
 	- 都是每个人心里真实平凡的爱
-- 喜欢的东西,就要好好使用
+- `喜欢的东西,就要好好使用`
 	- 物尽其用,对自己和对它都更好
 - 谈生死的时候,也可以微笑
 	- 既然生生死死是必经之事
