--- a/source/_posts/家的容器——写写画画系列.md
+++ b/source/_posts/家的容器——写写画画系列.md
@@ -53,9 +53,14 @@ IKEA的布制衣箱
 # 茶几
 # 厨房
 ## 布局
+推荐五门冰箱
 高效布局的二个要点
 - 采用最佳U型布局
 - 着眼“一金二银”区域
+### 一金二银
+`黄金区`：备餐区  ≥60cm，最好达到80cm，优先考虑
+银一区：盛盘区  ≥30cm
+银二区：沥水区  ≥30cm
 ## 橱柜
 ## 收纳
 
