看到厨房的柜子了

--- a/source/_posts/家的容器——写写画画系列.md
+++ b/source/_posts/家的容器——写写画画系列.md
@@ -26,12 +26,35 @@ category: [装修]
 房子 不等于 家  
 好好打理家，丢弃杂物，认证收纳，仔细擦洗，有氧居家  
 住的更大 不等于 住的更好  
-# 家
+# 家的容量
+房屋容量的三要素：
+柜子、柜子、柜子  
+三大诉求：
+- 容量大但不占地
+- 柜子多但不压抑
+- 价不高但很实用
+
 # 光
 亮灯仪式：关闭总闸，安装好所有灯泡，再打开总闸！
 正常家用，不要买高于3000K的灯泡。
 低色温暖光=2500K
 # 玄关
+鞋柜  
+- 深度：标准35cm，有条件到40cm
+- 上下层板基准间距16cm
+- 可活动层板：打排孔，侧板上每隔32mm一个孔
+- 容量优先
+- 开敞常用鞋位：40cm高，2-3层
+
+（600+600+200）* 400 * 2160：挂大衣，坐着穿鞋，侧墙放装饰（），两层敞开式鞋柜。
+
+玄关柜必备四神器
+- 活性炭：吸味，每月勤换
+- 剪刀，拆快递- -
+- 签字笔
+- 乱码印章，信息保密
+
+接待客人：网购四星级酒店白色布制拖鞋，一次买10双，可机洗。棉麻拖鞋，个性拖鞋，不要用塑料拖鞋。
 # 客厅
 公共物品放在公共空间
 - 书籍
@@ -58,7 +81,10 @@ IKEA的布制衣箱
 ![孩子玩具收纳](http://mmbiz.qpic.cn/mmbiz/TU7Iab8riaAtfQbIzMxVUbAGb2slC8R8hHtJ8SlYMAMEJSFUR3WWiaBxyOchiaqrsRnNE5f3ibsUD5R42ibGcCGpvQA/640?wx_fmt=jpeg&tp=webp&wxfrom=5&wx_lazy=1)
 
 # 茶几
+保证茶几的两大基本功能：置物和储物  
+四个方向都可以打开的茶几  
 # 厨房
+DIY一个滚动垃圾桶  
 ## 布局
 推荐五门冰箱
 高效布局的二个要点
@@ -69,6 +95,13 @@ IKEA的布制衣箱
 银一区：盛盘区  ≥30cm
 银二区：沥水区  ≥30cm
 ## 橱柜
+橱柜最基本的三个H：
+- H1桌面操作高度 身高（1660）／2 + 50 = 880mm
+- H2柜子底部高度 1550-1600mm
+- H3柜子顶部高度 2250mm，太高徒手够不到
+- 第四个特殊的H： 灶台高度比H1降低80mm左右，做成局部不等台面，方便炒菜，但是费用有提升
+
+底部柜子600深，顶部柜子300深
 ## 收纳
 
 # 家务
