增加灯的部分

--- a/source/_posts/家的容器——写写画画系列.md
+++ b/source/_posts/家的容器——写写画画系列.md
@@ -5,6 +5,8 @@ date: 2016-10-25 08:34:26
 updated: 2017-02-03 10:34:26
 category: [装修]
 ---
+# 井井有条的居住，并非本能，而是科学，需要用心钻研和不断时间——近藤典子
+
 转自：
 
 [住宅设计师逯薇的写写画画01 ：《家的光》](http://mp.weixin.qq.com/s?__biz=MzA4MDExMDM2OA==&mid=204029866&idx=1&sn=78afac8b412ae71c16badb724db045ba&scene=4#wechat_redirect)
@@ -38,6 +40,23 @@ category: [装修]
 亮灯仪式：关闭总闸，安装好所有灯泡，再打开总闸！
 正常家用，不要买高于3000K的灯泡。
 低色温暖光=2500K
+- 客厅灯
+    - 主灯：800mm起步。推荐吊扇灯20平米搭配1200mm直径
+    - 灯槽：让空间显得更高；间接照明
+    - 读书灯
+    - 边几灯
+- 餐厅灯
+    - 餐台吊灯：光线重心足够低，距离桌面650mm左右；餐桌正上方（预留电位）；选半透光材质灯罩（布艺，玻璃，**不要金属**）
+    - 餐柜灯：挂相片；入墙式通高餐柜在吊柜底部内嵌一排LED灯
+- 厨房灯
+    - 集成吊顶灯
+    - 柜底灯：方便操作
+    - 水槽灯：方便洗碗
+- 卧室灯
+    - 无主灯：五星级酒店没有主灯，由台灯、床头灯、装饰灯、灯槽等提供**局部照明**；躺在床上不应有直射眼睛的灯光
+    - 床头灯：摇臂床头灯，省空间，可旋转
+    - 小夜灯：方便起夜，照顾宝宝
+    - 烛光灯：装逼
 # 玄关
 鞋柜  
 - 深度：标准35cm，有条件到40cm
