add facicon back-to-top and excerpt

--- a/docs/life/儿童敏感期.md
+++ b/docs/life/儿童敏感期.md
@@ -4,7 +4,9 @@ tag: [教育, 敏感期]
 date: 2018-08-11 15:17:00
 updated: 2018-08-11 15:17:00
 ---
-
+something to excerpt
+<!-- more -->
+{{ $page }}
 [[toc]]
 
 # Hello aaaa
