--- a/content/post/work/fasthttp/01fh请求行.md
+++ b/content/post/work/fasthttp/01fh请求行.md
@@ -5,7 +5,7 @@ lastmod: 2020-08-18T14:08:42+08:00
 tags: [golang, fasthttp]
 categories: [golang, fasthttp]
 ---
-> 本系列通过解析`fasthttp`([v1.16.0](https://github.com/valyala/fasthttp/tree/v1.16.0))源码学习[HTTP1.1](https://httpwg.org/specs/rfc7230.html)。
+> 本系列通过解析`fasthttp`([v1.16.0](https://github.com/valyala/fasthttp/tree/v1.16.0))源码学习[HTTP/1.1](https://httpwg.org/specs/rfc7230.html)。
 
 ## 第一行
 `WEB`服务接收`HTTP`请求要做的第一件事，就是解析请求行([Request Line](https://httpwg.org/specs/rfc7230.html#request.line))。它的格式如下：
