fasthttp 请求头解析过程wip

--- a/content/post/work/fasthttp/02fh解析请求头.md
+++ b/content/post/work/fasthttp/02fh解析请求头.md
@@ -81,7 +81,7 @@ func readRawHeaders(dst, buf []byte) ([]byte, int, error) {
 		m++
 		// ...
 		if (m == 2 && b[0] == '\r') || m == 1 {
-			dst = append(dst, buf[:n]...)
+			// ...
 			return dst, n, nil
 		}
 	}
@@ -96,9 +96,29 @@ func readRawHeaders(dst, buf []byte) ([]byte, int, error) {
 
 针对指定的头字段：`Host`，`UserAgent`，`ContentType`，`ContentLength`，`Connection`和`Transfer-Encoding`，`fasthttp`会做一些特殊操作，我们会一一进行解析。其他头字段信息会存入`h.h`([源码](https://github.com/valyala/fasthttp/blob/v1.16.0/header.go#L70))中：`h.h = appendArgBytes(h.h, s.key, s.value, argsHasValue)`。
 
-我们先来`headerScanner.next()`。
+我们先深入分析`headerScanner.next()`。
 
-### `headerScanner.next()`
+### 头字段
+首先我们看看[头字段](https://httpwg.org/specs/rfc7230.html#header.fields)的结构：
+```text
+  header-field   = field-name ":" OWS field-value OWS
+
+  field-name     = token
+  field-value    = *( field-content / obs-fold )
+  field-content  = field-vchar [ 1*( SP / HTAB ) field-vchar ]
+  field-vchar    = VCHAR / obs-text
+
+  obs-fold       = CRLF 1*( SP / HTAB )
+                 ; obsolete line folding
+                 ; see Section 3.2.4
+```
+
+每个头字段均由不区分大小写的字段名，后跟冒号(`:`)，可选的前导空白(`OWS`)，字段值和可选的尾随空白(`OWS`)组成。
+
+> 注：`OWS`指的是`optional whitespace`，[详情链接](https://httpwg.org/specs/rfc7230.html#whitespace)。
+
+`fasthttp`的[headerScanner](https://github.com/valyala/fasthttp/blob/v1.16.0/header.go#L1985-L2005)就是头部扫描器，负责扫描请求头数据，解析出头字段的字段名(`key`)和字段值(`value`)，每次调用`next()`都解析一行数据。
+
 
 ## 总结
 
