fasthttp 请求头解析过程wip

--- a/content/post/work/fasthttp/02fh解析请求头.md
+++ b/content/post/work/fasthttp/02fh解析请求头.md
@@ -119,6 +119,9 @@ func readRawHeaders(dst, buf []byte) ([]byte, int, error) {
 
 `fasthttp`的[headerScanner](https://github.com/valyala/fasthttp/blob/v1.16.0/header.go#L1985-L2005)就是头部扫描器，负责扫描请求头数据，解析出头字段的字段名(`key`)和字段值(`value`)，每次调用`next()`都解析一行数据。
 
+根据标准，头字段名称紧跟着一个`:`，所以需要根据`:`的位置确认头字段名称的值。这里`fasthttp`加了一个[处理](https://github.com/valyala/fasthttp/blob/v1.16.0/header.go#L2039-L2043)：`:`之前不能有`\n`，因为此时这个头字段肯定是非法的。
+
+解析出头字段名称后，`fasthttp`根据[配置](https://github.com/valyala/fasthttp/blob/v1.16.0/server.go#L315-L331)看需不需要标准化头名称，`normalizeHeaderKey(s.key, s.disableNormalizing)`，这是为了统一客户端发送的请求头字段名称格式，防止出现类似`cONTENT-lenGTH`的字段名而无法匹配的情况。
 
 ## 总结
 
