--- a/content/post/plans/英语规划.md
+++ b/content/post/plans/英语规划.md
@@ -1,7 +1,7 @@
 ---
 title: 英语学习规划
-tags: [英语, 教育]
-categories: [教育]
+tags: [英语, 教育, plan]
+categories: [教育, education, plan]
 date: 2020-11-12T22:06:16+08:00
 updated: 2020-11-12T22:06:16+08:00
 
